Variables and Data Types.md

--- a/Theory/2. Variables and Data Types.md
+++ b/Theory/2. Variables and Data Types.md
@@ -214,3 +214,29 @@ A variable declared inside pair of brackets "{" and "}" in a method has scope wi
 ### Convert Integer to String:
     int a = 5;
     String ans = String.valueOf(a);
+
+### Wrapper Classes
+A wrapper class is a class that encapsulates a primitive data type into an object. This is useful because it allows primitive types to be used in places where only objects are expected, such as in collection frameworks like ArrayList,Vector,Generics. Each primitive data type has a corresponding wrapper class:
+
+|Primitive Type|Wrapper Class|
+|------|------|
+|char|Character|
+|byte|Byte|
+|short|Short|
+|int|Integer|
+|long|Long|
+|float|Float|
+|double|Double|
+|boolean|Boolean|
+
+#### Example:
+```
+int x1 = 10; // Primitive Type
+Integer  x2 = new Integer(10);
+------   --
+   ^      ^
+   :      :
+wrapper   reference
+class     variable
+    
+```
