4. Type Conversion .md

--- a/Theory/4. Type Conversion .md
+++ b/Theory/4. Type Conversion .md
@@ -25,3 +25,8 @@ System.out.println(z);
 100
 100.0
 ```
+
+
+<div>
+  <img src="https://media.geeksforgeeks.org/wp-content/uploads/20230428153049/Explicit-Type-Casting-Order-768.webp">
+</div>
