4. Type Conversion .md

--- a/Theory/4. Type Conversion .md
+++ b/Theory/4. Type Conversion .md
@@ -26,7 +26,54 @@ System.out.println(z);
 100.0
 ```
 
-
-<div>
-  <img src="https://media.geeksforgeeks.org/wp-content/uploads/20230428153049/Explicit-Type-Casting-Order-768.webp">
+### Narrowing or Explicit Conversion
+<div align="center">
+  <img src="https://media.geeksforgeeks.org/wp-content/uploads/20230428153049/Explicit-Type-Casting-Order-768.webp"alt="Narrowing" width="650" height="250">
 </div>
+
+#### Example:
+
+```
+double d = 65.4;
+int i = (int)d;
+char c = (char)i;
+System.out.println(i);
+System.out.println(c);
+```
+#### Output:
+```
+65
+A
+```
+#### While assigning the value to byte type the fractional part is lost and is reduced to modulo 256 (range of byte). High chance of loss of data.
+  ```
+  byte b;
+  int i = 257;
+  double d = 323.142;
+  b = (byte)i;  // i % 256
+  System.out.println(b);
+  b = (byte)d;  // d % 256
+  System.out.println(b);
+  ```
+#### Output:
+```
+1
+67
+```
+
+Note:
+- 'byte' in java is an 8-bit signed integer, which means it can represent values from '-128' to '127'.
+- Example:
+  ```
+  byte b = 127;
+  System.out.println((byte)(b+1));
+  ```
+- Output:
+  ```
+  -128
+  ```
+#### Reason:
+  - (byte) 128 means 128 % 256 which should have been 128 but since the value '128' exceeds the maximum value a byte can hold i.e.,127. The value that wraps around to the minimum value of the byte type. 
+  - [128 - 256 = -128] 
+  
+##### obj.hasNextInt() = checks if an integer value is available.
